{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 289,
  "lineage": "6b6ece7a-1ee0-6cdb-cf81-6e1076b25c4b",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-04-23T14:07:07.524-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/festive-athlete-456521-f1/global/firewalls/allow-http-https",
            "log_config": [],
            "name": "allow-http-https",
            "network": "https://www.googleapis.com/compute/v1/projects/festive-athlete-456521-f1/global/networks/gitops-portfolio-vpc",
            "priority": 1000,
            "project": "festive-athlete-456521-f1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/festive-athlete-456521-f1/global/firewalls/allow-http-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "gitlab",
              "jenkins",
              "monitoring",
              "postfix"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-04-23T14:07:06.898-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/festive-athlete-456521-f1/global/firewalls/allow-internal",
            "log_config": [],
            "name": "allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/festive-athlete-456521-f1/global/networks/gitops-portfolio-vpc",
            "priority": 1000,
            "project": "festive-athlete-456521-f1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/festive-athlete-456521-f1/global/firewalls/allow-internal",
            "source_ranges": [
              "10.0.0.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-04-23T14:07:07.280-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/festive-athlete-456521-f1/global/firewalls/allow-jenkins",
            "log_config": [],
            "name": "allow-jenkins",
            "network": "https://www.googleapis.com/compute/v1/projects/festive-athlete-456521-f1/global/networks/gitops-portfolio-vpc",
            "priority": 1000,
            "project": "festive-athlete-456521-f1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/festive-athlete-456521-f1/global/firewalls/allow-jenkins",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "jenkins"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3000",
                  "9090",
                  "9093",
                  "9100",
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-04-23T14:07:07.375-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/festive-athlete-456521-f1/global/firewalls/allow-monitoring",
            "log_config": [],
            "name": "allow-monitoring",
            "network": "https://www.googleapis.com/compute/v1/projects/festive-athlete-456521-f1/global/networks/gitops-portfolio-vpc",
            "priority": 1000,
            "project": "festive-athlete-456521-f1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/festive-athlete-456521-f1/global/firewalls/allow-monitoring",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "monitoring"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-04-23T14:07:07.643-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/festive-athlete-456521-f1/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/festive-athlete-456521-f1/global/networks/gitops-portfolio-vpc",
            "priority": 1000,
            "project": "festive-athlete-456521-f1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/festive-athlete-456521-f1/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_vpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "1194"
                ],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2025-04-23T14:07:07.225-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/festive-athlete-456521-f1/global/firewalls/allow-vpn",
            "log_config": [],
            "name": "allow-vpn",
            "network": "https://www.googleapis.com/compute/v1/projects/festive-athlete-456521-f1/global/networks/gitops-portfolio-vpc",
            "priority": 1000,
            "project": "festive-athlete-456521-f1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/festive-athlete-456521-f1/global/firewalls/allow-vpn",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "gitlab",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20250415",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/festive-athlete-456521-f1/zones/europe-west1-b/disks/gitlab"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-04-23T14:07:30.733-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/festive-athlete-456521-f1/zones/europe-west1-b/instances/gitlab",
            "instance_id": "5258462436471924861",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-standard-2",
            "metadata": {
              "ssh-keys": "admin:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQC3GRGp1XTUKRm+hsipqpZ7TuSLeinX7ImDq8NZfYg+4e37MqxLu7jZRx/MFZyLt94q3n0gUugjsrHesdRL9zYujW83qqEiHPQyqwk0AzhL/GNGi1fS7nl0ZNIQETTTNCrXZ7maQOdjO9MHctKDFkTV+/4XN1Q50uQUmcRRlrRAAAek5e0TlvnNT+DvQ1t74+mS/azAZCHC9aY9RGNPSnksdw4OZ9WgQgJ9zKnrbNQESGQtKrOxbizoI+452HpTg6Psiv5bt7G9wQJLQ+TrtFActAuEkZt7VL0m5jyFS4cTcEtW4smWlWssrJp1fQ4/ixVIhAutc3uUvdbTQLH3bNQ8yJQoBroKRfQ/Kpiy9o8Dq3s/0RnA4netA9L66JaxSn1LsFJjnrzZqAeFEXSIgoA76ZcIZTrb9Zglqj/s7X3KHh6 [...]
            },
            "metadata_fingerprint": "3rx-JuTlFwU=",
            "name": "gitlab",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.77.10.249",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/festive-athlete-456521-f1/global/networks/gitops-portfolio-vpc",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/festive-athlete-456521-f1/regions/europe-west1/subnetworks/gitops-portfolio-subnet",
                "subnetwork_project": "festive-athlete-456521-f1"
              }
            ],
            "project": "festive-athlete-456521-f1",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/festive-athlete-456521-f1/zones/europe-west1-b/instances/gitlab",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "gitlab"
            ],
            "tags_fingerprint": "TK78cUpPpuI=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20250415",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/festive-athlete-456521-f1/zones/europe-west1-b/disks/jenkins"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-04-23T14:07:31.489-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/festive-athlete-456521-f1/zones/europe-west1-b/instances/jenkins",
            "instance_id": "1363103162594289788",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "admin:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQC3GRGp1XTUKRm+hsipqpZ7TuSLeinX7ImDq8NZfYg+4e37MqxLu7jZRx/MFZyLt94q3n0gUugjsrHesdRL9zYujW83qqEiHPQyqwk0AzhL/GNGi1fS7nl0ZNIQETTTNCrXZ7maQOdjO9MHctKDFkTV+/4XN1Q50uQUmcRRlrRAAAek5e0TlvnNT+DvQ1t74+mS/azAZCHC9aY9RGNPSnksdw4OZ9WgQgJ9zKnrbNQESGQtKrOxbizoI+452HpTg6Psiv5bt7G9wQJLQ+TrtFActAuEkZt7VL0m5jyFS4cTcEtW4smWlWssrJp1fQ4/ixVIhAutc3uUvdbTQLH3bNQ8yJQoBroKRfQ/Kpiy9o8Dq3s/0RnA4netA9L66JaxSn1LsFJjnrzZqAeFEXSIgoA76ZcIZTrb9Zglqj/s7X3KHh6 [...]
            },
            "metadata_fingerprint": "3rx-JuTlFwU=",
            "name": "jenkins",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.205.33.245",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/festive-athlete-456521-f1/global/networks/gitops-portfolio-vpc",
                "network_ip": "10.0.0.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/festive-athlete-456521-f1/regions/europe-west1/subnetworks/gitops-portfolio-subnet",
                "subnetwork_project": "festive-athlete-456521-f1"
              }
            ],
            "project": "festive-athlete-456521-f1",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/festive-athlete-456521-f1/zones/europe-west1-b/instances/jenkins",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "jenkins"
            ],
            "tags_fingerprint": "4l7--0t2PzY=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20250415",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/festive-athlete-456521-f1/zones/europe-west1-b/disks/monitoring"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-04-23T14:07:31.036-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/festive-athlete-456521-f1/zones/europe-west1-b/instances/monitoring",
            "instance_id": "8645733152316516477",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "admin:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQC3GRGp1XTUKRm+hsipqpZ7TuSLeinX7ImDq8NZfYg+4e37MqxLu7jZRx/MFZyLt94q3n0gUugjsrHesdRL9zYujW83qqEiHPQyqwk0AzhL/GNGi1fS7nl0ZNIQETTTNCrXZ7maQOdjO9MHctKDFkTV+/4XN1Q50uQUmcRRlrRAAAek5e0TlvnNT+DvQ1t74+mS/azAZCHC9aY9RGNPSnksdw4OZ9WgQgJ9zKnrbNQESGQtKrOxbizoI+452HpTg6Psiv5bt7G9wQJLQ+TrtFActAuEkZt7VL0m5jyFS4cTcEtW4smWlWssrJp1fQ4/ixVIhAutc3uUvdbTQLH3bNQ8yJQoBroKRfQ/Kpiy9o8Dq3s/0RnA4netA9L66JaxSn1LsFJjnrzZqAeFEXSIgoA76ZcIZTrb9Zglqj/s7X3KHh6 [...]
            },
            "metadata_fingerprint": "3rx-JuTlFwU=",
            "name": "monitoring",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.241.164.212",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/festive-athlete-456521-f1/global/networks/gitops-portfolio-vpc",
                "network_ip": "10.0.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/festive-athlete-456521-f1/regions/europe-west1/subnetworks/gitops-portfolio-subnet",
                "subnetwork_project": "festive-athlete-456521-f1"
              }
            ],
            "project": "festive-athlete-456521-f1",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/festive-athlete-456521-f1/zones/europe-west1-b/instances/monitoring",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "monitoring"
            ],
            "tags_fingerprint": "KYs-bTO5BgQ=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "openvpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20250415",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/festive-athlete-456521-f1/zones/europe-west1-b/disks/openvpn"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-04-23T14:07:31.334-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/festive-athlete-456521-f1/zones/europe-west1-b/instances/openvpn",
            "instance_id": "7309722148273449084",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-small",
            "metadata": {
              "ssh-keys": "admin:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQC3GRGp1XTUKRm+hsipqpZ7TuSLeinX7ImDq8NZfYg+4e37MqxLu7jZRx/MFZyLt94q3n0gUugjsrHesdRL9zYujW83qqEiHPQyqwk0AzhL/GNGi1fS7nl0ZNIQETTTNCrXZ7maQOdjO9MHctKDFkTV+/4XN1Q50uQUmcRRlrRAAAek5e0TlvnNT+DvQ1t74+mS/azAZCHC9aY9RGNPSnksdw4OZ9WgQgJ9zKnrbNQESGQtKrOxbizoI+452HpTg6Psiv5bt7G9wQJLQ+TrtFActAuEkZt7VL0m5jyFS4cTcEtW4smWlWssrJp1fQ4/ixVIhAutc3uUvdbTQLH3bNQ8yJQoBroKRfQ/Kpiy9o8Dq3s/0RnA4netA9L66JaxSn1LsFJjnrzZqAeFEXSIgoA76ZcIZTrb9Zglqj/s7X3KHh6 [...]
            },
            "metadata_fingerprint": "3rx-JuTlFwU=",
            "name": "openvpn",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.34.188.51",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/festive-athlete-456521-f1/global/networks/gitops-portfolio-vpc",
                "network_ip": "10.0.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/festive-athlete-456521-f1/regions/europe-west1/subnetworks/gitops-portfolio-subnet",
                "subnetwork_project": "festive-athlete-456521-f1"
              }
            ],
            "project": "festive-athlete-456521-f1",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/festive-athlete-456521-f1/zones/europe-west1-b/instances/openvpn",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "openvpn"
            ],
            "tags_fingerprint": "uGw-Kh90P2w=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "postfix",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20250415",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/festive-athlete-456521-f1/zones/europe-west1-b/disks/postfix"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-04-23T14:07:31.743-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/festive-athlete-456521-f1/zones/europe-west1-b/instances/postfix",
            "instance_id": "4479569348543178876",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "admin:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQC3GRGp1XTUKRm+hsipqpZ7TuSLeinX7ImDq8NZfYg+4e37MqxLu7jZRx/MFZyLt94q3n0gUugjsrHesdRL9zYujW83qqEiHPQyqwk0AzhL/GNGi1fS7nl0ZNIQETTTNCrXZ7maQOdjO9MHctKDFkTV+/4XN1Q50uQUmcRRlrRAAAek5e0TlvnNT+DvQ1t74+mS/azAZCHC9aY9RGNPSnksdw4OZ9WgQgJ9zKnrbNQESGQtKrOxbizoI+452HpTg6Psiv5bt7G9wQJLQ+TrtFActAuEkZt7VL0m5jyFS4cTcEtW4smWlWssrJp1fQ4/ixVIhAutc3uUvdbTQLH3bNQ8yJQoBroKRfQ/Kpiy9o8Dq3s/0RnA4netA9L66JaxSn1LsFJjnrzZqAeFEXSIgoA76ZcIZTrb9Zglqj/s7X3KHh6 [...]
            },
            "metadata_fingerprint": "3rx-JuTlFwU=",
            "name": "postfix",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.195.61.209",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/festive-athlete-456521-f1/global/networks/gitops-portfolio-vpc",
                "network_ip": "10.0.0.6",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/festive-athlete-456521-f1/regions/europe-west1/subnetworks/gitops-portfolio-subnet",
                "subnetwork_project": "festive-athlete-456521-f1"
              }
            ],
            "project": "festive-athlete-456521-f1",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/festive-athlete-456521-f1/zones/europe-west1-b/instances/postfix",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "postfix"
            ],
            "tags_fingerprint": "8HdfMRf0cXc=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/festive-athlete-456521-f1/global/networks/gitops-portfolio-vpc",
            "mtu": 0,
            "name": "gitops-portfolio-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "3765085814978308235",
            "numeric_id": "3765085814978308235",
            "project": "festive-athlete-456521-f1",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/festive-athlete-456521-f1/global/networks/gitops-portfolio-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-04-23T14:07:07.289-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.0.0.1",
            "id": "projects/festive-athlete-456521-f1/regions/europe-west1/subnetworks/gitops-portfolio-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "gitops-portfolio-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/festive-athlete-456521-f1/global/networks/gitops-portfolio-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "festive-athlete-456521-f1",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/festive-athlete-456521-f1/regions/europe-west1/subnetworks/gitops-portfolio-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 6374273383531866260
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}